[tool.poetry]
name = "burp-suite-http-proxy-history-converter"
version = "0.1.0"
description = "Convert BurpSuite history files from XML to CSV"
authors = ["Mart Sõmermaa <mrts.pydev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
