[tool.poetry]
name = "burp-suite-http-proxy-history-converter"
version = "0.1.0"
description = "Convert BurpSuite history files from XML to CSV"
authors = ["Mart Sõmermaa <mrts.pydev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
xmltodict = "^0.12.0"
ipython = "^7.15.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.8.3"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
